--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
-    <h1> imagem aqui </h1>
-    <ul> 
-        <li>escola</li>
-    <li> estudante</li>
+    <header class="cabeçalho">
+    
+        <ing class="cabeçalho-imagem"src="alurastart logo 1.png" alt="logo alura" srcset=""></ing>
+            <img src="alurastart logo 1.png" alt="">
+    <ul class="cabeçalho-lista"> 
+        <li class="cabeçalho-lista-item">escola</li>
+    <li class="cabeçalho-lista-item"> estudante</li>
         
     </ul>
 </header>
