cabeçalho não deu

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 </head>
 <body>
     <header class="cabeçalho">
-    
-        <ing class="cabeçalho-imagem"src="alurastart logo 1.png" alt="logo alura" srcset=""></ing>
-            <img src="alurastart logo 1.png" alt="">
-    <ul class="cabeçalho-lista"> 
-        <li class="cabeçalho-lista-item">escola</li>
+          <img class="cabeçalho-imagem" src="alurastart logo 1.png" alt="">
+     <ul class="cabeçalho-lista"> 
+    <li class="cabeçalho-lista-item">escola</li>
     <li class="cabeçalho-lista-item"> estudante</li>
         
     </ul>
 </header>
+
+
 </body>
 </html>
