--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
         
     </ul>
 </header>
+<section class="escola">
+    <div class="escola-div">
+    <h2 class="escola-titulo">sobre a escola</h2>
+    <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. 
+    </p>
+    <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+</div>
 
+</section>
+<img src="Formula-amico 1.png" alt="">
 
 </body>
 </html>
