--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
     </p>
     <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
 </div>
-
+<img class="escola-imagem" src="Formula-amico 1.png" alt="">
 </section>
-<img src="Formula-amico 1.png" alt="">
 
 </body>
 </html>
