--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <h2 class="escola-titulo">sobre a escola</h2>
     <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação. 
     </p>
-    <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!</p>
+    <p class="escola-texto-dois">a escola Floriano Peixoto, e uma instituição estadual.
+     a escola é um ambiente social bem inclusivo, com diversas pessoas amigaveis</p>
 </div>
 <img class="escola-imagem" src="Formula-amico 1.png" alt="">
 </section>
